# bsp2stk

./: .gitignore  LaunchVehicle.e  README.md  main.py  pyproject.toml  setup.cfg
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-18-bsp2stk-implementation.md  2026-04-19-cross-platform-release.md  2026-04-20-stk-v9-format.md
docs/superpowers/specs/: 2026-04-18-bsp2stk-design.md  2026-04-19-cross-platform-release-design.md  2026-04-20-stk-v9-format-design.md
pyinstaller/: bsp2stk-cli.spec  bsp2stk.spec
src/bsp2stk/: __main__.py
src/bsp2stk/cli/: menu.py
src/bsp2stk/core/: convert.py  info.py
src/bsp2stk/gui/: convert_view.py  info_view.py  main_window.py  paths.py
src/bsp2stk/io/: handlers.py
stk/: Voyager_1.a54206u_V0.2_merged.stk
tests/cli/: test_menu.py
tests/core/: test_convert.py  test_info.py
tests/io/: test_handlers.py
